--- a/jxcore/package.json
+++ b/jxcore/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "async": "^0.9.0",
+    "backbone": "^1.2.0",
+    "backbone-pouch": "^1.4.0",
     "body-parser": "^1.12.0",
     "compression": "^1.4.1",
     "config": "^1.12.0",
@@ -20,6 +22,7 @@
     "handlebars": "^3.0.3",
     "jquery": "^2.1.3",
     "js-yaml": "^3.2.7",
+    "pouchdb": "^3.5.0",
     "rendr": "git+https://github.com/rendrjs/rendr.git",
     "rendr-handlebars": "git+https://github.com/rendrjs/rendr-handlebars.git",
     "serve-static": "^1.9.1",
