--- a/jxcore/package.json
+++ b/jxcore/package.json
@@ -14,6 +14,7 @@
     "backbone": "^1.2.0",
     "backbone-pouch": "^1.4.0",
     "body-parser": "^1.12.0",
+    "chai": "^2.3.0",
     "compression": "^1.4.1",
     "config": "^1.12.0",
     "cookie-parser": "^1.3.4",
