--- a/jxcore/package.json
+++ b/jxcore/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "backbone": "^1.2.0",
-    "backbone-pouch": "^1.4.0",
+    "backbone-pouch": "git+https://github.com/jo/backbone-pouch.git",
     "body-parser": "^1.12.0",
     "chai": "^2.3.0",
     "compression": "^1.4.1",
